--- a/src/styles/settings/typography.css
+++ b/src/styles/settings/typography.css
@@ -29,6 +29,13 @@ h4 {
 }
 
 /* size: 16px-32px line-height: 24px-36px */
+.caption--700 {
+  font-size: clamp(1rem, 0.7573rem + 1.0356vw, 2rem);
+  line-height: clamp(1.5rem, 1.318rem + 0.7767vw, 2.25rem);
+  font-weight: 700;
+}
+
+/* size: 16px-32px line-height: 24px-36px */
 .caption--500 {
   font-size: clamp(1rem, 0.7573rem + 1.0356vw, 2rem);
   line-height: clamp(1.5rem, 1.318rem + 0.7767vw, 2.25rem);
