--- a/src/styles/settings/common.css
+++ b/src/styles/settings/common.css
@@ -11,3 +11,4 @@
 @import url('../components/swipe.css');
 @import url('../components/cards.css');
 @import url('../components/gallery.css');
+@import url('../components/pagination.css');
