--- a/src/styles/pages/error.css
+++ b/src/styles/pages/error.css
@@ -1,9 +1,23 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ошибка</title>
-  </head>
-  <body></body>
-</html>
+.error__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 100px;
+  height: 70vh;
+  background: url('../../img/error/xxx.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  /* 30px-50px */
+  gap: clamp(1.875rem, 1.5716rem + 1.2945vw, 3.125rem);
+}
+
+.error__not-find-icon {
+  flex-shrink: 0;
+
+  /* 100px-260px */
+  height: clamp(6.25rem, 3.82rem + 10.36vw, 16.25rem);
+  width: auto;
+}
