--- a/src/styles/components/footer.css
+++ b/src/styles/components/footer.css
@@ -31,6 +31,38 @@
   gap: clamp(1.875rem, 1.5716rem + 1.2945vw, 3.125rem);
 }
 
+.footer__content__consumers {
+  display: flex;
+  flex-direction: column;
+
+  /* 30px-50px */
+  gap: clamp(1.875rem, 1.5716rem + 1.2945vw, 3.125rem);
+}
+
+.footer__content__consumers__items {
+  display: flex;
+  flex-wrap: wrap;
+
+  /* 20px-50px */
+  gap: clamp(1.25rem, 0.79rem + 1.94vw, 3.125rem);
+}
+
+.footer__content__consumers__item {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid var(--color-snow-white);
+
+  /* 10px-15px */
+  gap: clamp(0.625rem, 0.549rem + 0.3241vw, 0.938rem);
+}
+
+.footer__content__consumers__item svg {
+  flex-shrink: 0;
+
+  /* 40px-60px */
+  height: clamp(2.5rem, 2.20rem + 1.29vw, 3.75rem);
+}
+
 .footer__content__friends {
   display: flex;
   flex-direction: column;
